--- a/style.css
+++ b/style.css
@@ -204,6 +204,10 @@ footer{
 .logo{
     width:60vw;
     padding: 15px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    box-shadow: 0px 0px 15px 11px rgba(0,0,0,0.42);
+
 }
 
 .activity-container{
