--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ footer{
 .slide1{
     /* position: sticky;
     top: 100px; */
-    width:100%;
+    width: 60vw;
     height: auto;
     background: royalblue;
     box-shadow: 0px 0px 15px 11px rgba(0,0,0,0.42);
@@ -199,10 +199,11 @@ footer{
     padding: 15px;
     font: initial;
     font-weight: bold;
+    width: 50%;
 }
 
 .logo{
-    width:60vw;
+    height:30vw;
     padding: 15px;
     background-color: rgb(255, 255, 255);
     border-radius: 50%;
@@ -299,3 +300,23 @@ h6{
 }
 
 /* FOOTER END */
+
+@media screen and (max-width: 768px){
+    .slide1{
+        width:100%;
+        height: auto;
+    }
+
+    .description{
+        width: 80%;
+    }
+    
+    .logo{
+        height:60vw;
+        padding: 15px;
+        background-color: rgb(255, 255, 255);
+        border-radius: 50%;
+        box-shadow: 0px 0px 15px 11px rgba(0,0,0,0.42);
+    
+    }
+}
